		* The Javadoc now uses paragraphs.
	* Updated Loadable.java.
		* The Javadoc now uses paragraphs.
		* The methods are now simply default methods and no longer
		public static, as it's redundant.
		* Elaborated the Javadoc comments for the interface and its
		methods.
		* Changed load() to open().
		* Changed unload() to close().
	* Updated Savable.java.
		* The Javadoc now uses paragraphs.
	* Added the catalog package for PacIO.
		* It features a package-info.java that briefly describes the
		package.
	* Added the rom package for PacIO.
		* It features a package-info.java that briefly describes the
		package.
	* Added the util package for PacIO.
		* It features a package-info.java that briefly describes the
		package.

2026-01-01 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.5.1-alpha
	* Renewed the copyright year for each Java file to 2026.
	* Updated the package-info.java for
	io.github.thatgarlicdude.pacio.file.
		* Changed the comment describing the package to represent it
		better.

2025-12-29 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.5.0-alpha
	* Updated PacRomSet.java.
		* Renamed it to PacDirectory.java.
		* The roms variable is now called files, and is a final List
		instead of an ArrayList.
		* The method getFiles now returns an unmodifiable list instead
		of pointing to the list.
		* Renamed the open methods to from.
		* Removed the openRoms method.
		* Lots of cleanup.
	* Added PacObject.java.
		* This serves as a replacement for PacFile.java.
	* Added Loadable.java.
		* Loadable features two abstract methods: load and unload.
	* Updated PacRom.java.
		* Renamed it to PacFile.java, not to be confused with the one
		that's deleted.
		* Removed the DEFAULT_DATA variable.
		* Renamed the open methods to from.
		* The readN method has been renamed to read.
		* The writeN method has been renamed to write.
		* Lots of cleanup.
	* Removed the io.github.thatgarlicdude.pacio.roms package in the test
	src.